Bug 630835. Make BuildLayer responsible for setting a visible region on the layer, and let FrameLayerBuilder only reduce it. r=tnikkel,a=blocking This avoids problems with FrameLayerBuilder making the visible region bigger than we expected, invalidating CONTENT_OPAQUE flags set on the layer. In particular, we had been using TransformBounds to compute the new visible region, and for non-axis-aligned transforms this gives us a visible region which contains areas not actually painted by the layer contents.